Fixed spacing

--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -1,1 +1,1 @@
-$content-width:    66.6%;
+$content-width: 1200px;
